--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,12 @@
 html,body {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 body {
     padding: 0 2% 2% 2%;
     font-family: 'Myriad Pro';
-    overflow: hidden;
 }
 
 :root {
@@ -76,6 +76,7 @@ body {
     max-width: 265px;
     width: 100%;
     height: 100%;
+    padding: 40px 0;
     background-color: #75B3F9;
     border: 1px solid #FFFFFF;
     margin: 0 auto;
